tests/neg/semantic_unknown_union_member.baa
// EXPECT: عضو غير معرّف

اتحاد قيمة {
    صحيح رقم.
}

صحيح الرئيسية() {
    اتحاد قيمة ق.
    ق:س = ١.
    إرجع ٠.
}
